--- a/LMS-M/assets/css/bootstrap.css
+++ b/LMS-M/assets/css/bootstrap.css
@@ -51,9 +51,11 @@ File: Custom Bootstrap Css File
 
 body {
   margin: 0;
-  font-family: var(--bs-font-sans-serif);
+  /*font-family: var(--bs-font-sans-serif);*/
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 0.875rem;
-  font-weight: 400;
+  /*font-weight: 400;*/
+  font-weight: 300;
   line-height: 1.5;
   color: #495057;
   background-color: #f8f8f8;
@@ -4765,7 +4767,7 @@ textarea.form-control-lg {
   height: 100%;
   margin: 0; }
   .modal-fullscreen .modal-content {
-    /*height: 100%;*/
+    min-height: 100%;
     border: 0;
     border-radius: 0; }
   .modal-fullscreen .modal-header {
@@ -4782,7 +4784,7 @@ textarea.form-control-lg {
     height: 100%;
     margin: 0; }
     .modal-fullscreen-sm-down .modal-content {
-      /*height: 100%;*/
+      min-height: 100%;
       border: 0;
       border-radius: 0; }
     .modal-fullscreen-sm-down .modal-header {
@@ -4799,7 +4801,7 @@ textarea.form-control-lg {
     height: 100%;
     margin: 0; }
     .modal-fullscreen-md-down .modal-content {
-      /*height: 100%;*/
+      min-height: 100%;
       border: 0;
       border-radius: 0; }
     .modal-fullscreen-md-down .modal-header {
@@ -4816,7 +4818,7 @@ textarea.form-control-lg {
     height: 100%;
     margin: 0; }
     .modal-fullscreen-lg-down .modal-content {
-      /*height: 100%;*/
+      min-height: 100%;
       border: 0;
       border-radius: 0; }
     .modal-fullscreen-lg-down .modal-header {
@@ -4850,7 +4852,7 @@ textarea.form-control-lg {
     height: 100%;
     margin: 0; }
     .modal-fullscreen-xxl-down .modal-content {
-      /*height: 100%;*/
+      min-height: 100%;
       border: 0;
       border-radius: 0; }
     .modal-fullscreen-xxl-down .modal-header {
