--- a/LMS-M/assets/css/main.css
+++ b/LMS-M/assets/css/main.css
@@ -1,33 +1,22 @@
-html, body {    
+  html, body {    
     height: 100%;
     margin: 0;
-    background-color: #fff;  
+    background-color: #fff;
   }
   main {
     min-height: 100%;
-  }
-  footer{
-    margin-top: -100px;
-  }
-
-  .floating-menu{
-    border-radius:100px;
-    z-index:999;
-    padding-top:10px;
-    padding-bottom:10px;
-    right:38.4rem;
-    position:fixed;
-    display:inline-block;
-    bottom:0%;
-    -webkit-transform:translateY(-50%);
-    -ms-transform:translateY(-50%);
-    transform:translateY(-50%)
-  }      
-
-  .btn-outline-light{
-    color: #eff2f7;
+    background-color: #fff;
   }
   
+  .btn-outline-light{
+    color: #eff2f7;    
+  }
+  
+  .btn-light{
+    background-color: #fff;
+  }
+
+
   .container{
     max-width: 1320px;
   }
@@ -42,7 +31,42 @@ html, body {
 
   .bb-red{color: red;}
 
-
-  .modal-fullscreen .modal-content {
-    min-height: 100%;
+  .floating-menu {
+    position: absolute;    
+    right: 50px;
+    border-radius: 70px;
+    bottom: 100px;    
   }
+
+  .floating-meun .folating-down{
+    right: 50px;    
+  }
+
+  .dropdown-menu[style]{
+    right: 0px !important;
+  }
+
+  #ezcSpeechBubble{
+    width: 1px;
+    height: 1px;
+  }
+
+  #ezchatsmall_container{
+    width: 1px!important; 
+    height: 1px!important;
+  }
+
+  #ezcSpeechBubbleImgWrap{
+    visibility: hidden;
+  }
+
+  #chat_ezHelp{
+    z-index: auto !important;
+    border: hidden;
+  }
+
+  
+  
+  
+
+  
