--- a/LMS-M/assets/css/bootstrap.css
+++ b/LMS-M/assets/css/bootstrap.css
@@ -57,8 +57,8 @@ body {
   font-size: .875rem;
   font-weight: 300;
   line-height: 1.5;
-  color: #495057;
-  background-color: #f8f8f8;
+  color: #191919;
+  background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
@@ -67,16 +67,17 @@ hr {
   color: inherit;
   background-color: currentColor;
   border: 0;
-  opacity: 0.2; }
+  opacity: 0.2;}
 
 hr:not([size]) {
   height: 1px; }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   margin-top: 0;
+  color: inherit;
   margin-bottom: 0.5rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1.2;}
 
 h1, .h1 {
   font-size: calc(1.34375rem + 1.125vw); }
@@ -6515,10 +6516,10 @@ textarea.form-control-lg {
   font-weight: 300 !important; }
 
 .fw-bold {
-  font-weight: 500 !important; }
+  font-weight: 400 !important; }
 
 .fw-bolder {
-  font-weight: 700 !important; }
+  font-weight: 600 !important; }
 
 .lh-1 {
   line-height: 1 !important; }
@@ -6572,7 +6573,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #0576b9 !important; }
+  color: #438DFF !important; }
 
 .text-secondary {
   color: #adb5bd !important; }
@@ -6596,10 +6597,13 @@ textarea.form-control-lg {
   color: #eff2f7 !important; }
 
 .text-dark {
-  color: #343a40 !important; }
+  color: #191919 !important; }
 
 .text-white {
   color: #fff !important; }
+
+.text-sb {
+  color: #42D8FF !important; }
 
 .text-body {
   color: #495057 !important; }
@@ -9240,13 +9244,13 @@ textarea.form-control-lg {
 
 /* =============
    General
-============= */
+
 html {
   position: relative;
   min-height: 100%; }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-  color: #495057; }
+  color: #191919; }
 
 a {
   text-decoration: none !important; }
@@ -9691,3 +9695,6 @@ button, a {
 @keyframes animate-positive {
   0% {
     width: 0; } }
+
+
+============= */
