--- a/LMS-M/assets/css/visco/common2.css
+++ b/LMS-M/assets/css/visco/common2.css
@@ -47,7 +47,7 @@ a:hover {color: #191919 !important;text-decoration:underline !important;font-wei
 .oz-footer .fo-imgs img {float:left;display:block;height:3rem;width:auto;margin-right:1rem;margin-bottom:1rem; cursor:pointer;}
 .oz-footer .fo-imgs img:last-child {margin-right:0rem;}
 
-
+ws :test...
 
 
 
