--- a/LMS-M/assets/css/visco/about.css
+++ b/LMS-M/assets/css/visco/about.css
@@ -26,10 +26,12 @@ o(a~z)-(a~z)ps(01~99번째 세션) : 고유 클래스 규칙
 .ob-aps05 .content img {width:100%;height:auto;}
 
 .ob-aps06 .maps {width:100%;padding-bottom:40%;position:relative;}
-@media (max-width: 720px) {.ob-aps06 .maps {padding-bottom:60%;}}
+@media (max-width: 720px) {
+	.ob-aps06 .maps {padding-bottom:60%;}
+}
 .ob-aps06 .maps iframe {position:absolute;top:0;left:0;width:100%;height:100%;}
 
-
+.ob-bps01 {border: 1px solid red;}
 
 
 
